fix: 용어 랜덤 관리 도메인 정보 변경